--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:041501923bd6f9dc811b87bcb4776861cb1e24759756bc71b60585fa494f27e6"
+  "signature": "sha256:4811a8898806451a1e43ac1aca32cb4ac5c4067a584975b67f7034bc65e73023"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -34,17 +34,17 @@
       "\n",
       "All the class materials are available at:\n",
       "\n",
-      "* lecture slides/homework assignments: https://yadongli.github.io/numfin\n",
-      "* IPython notebook sources: https://github.com/yadongli/numfin\n",
+      "* lecture slides/homework assignments: http://yadongli.github.io/nyumath2048/\n",
+      "* IPython notebook sources: https://github.com/yadongli/nyumath2048/\n",
       "\n",
       "The lecture slides are all generated from the IPython notebooks sources. You can get a copy of the source by:\n",
       "\n",
       "* download the zip package from the source url above, or\n",
       "* (recommended): using the git command line tool: \n",
       "  * install git command line tool from http://git-scm.com/book/en/v2/Getting-Started-Installing-Git\n",
-      "  * clone the source code to your local folder by issue the following command, which creates a new folder of numfin, and downloads all the suorces from github:\n",
+      "  * clone the source code to your local folder by issue the following command, which creates a new folder of nyumath2048, and downloads all the suorces from github:\n",
       "  \n",
-      "```git clone http://github.com/yadongli/numfin.git```\n",
+      "```git clone http://github.com/yadongli/nyumath2048.git```\n",
       "\n",
       "  * After you git clone the source, you can get the incremental updates by:\n",
       "  \n",
@@ -77,6 +77,7 @@
       "* Enthought canopy comes with a graphical package manager\n",
       "* Anaconda comes with command line package manager ```conda```\n",
       "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)\n",
+      "* both distributions support major OS\n",
       "\n",
       "Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS."
      ]
@@ -100,7 +101,7 @@
       "\n",
       "* The required IPython version is 2.3.1 or later\n",
       "\n",
-      "If you have installed one of the Python distributions, you can go to the numfin folder from a command line window and start IPython notebook by: \n",
+      "If you have installed one of the Python distributions, you can go to the nyumath2048 folder from a command line window and start IPython notebook by: \n",
       "\n",
       "```ipython notebook```\n",
       "\n",
@@ -110,7 +111,27 @@
       "\n",
       "Check your IPython installation if you do not see a brower window like below:\n",
       "\n",
-      "<img src=ipynb.png height=300, width=600>"
+      "<img src=\"img/ipynb.png\" height=300, width=600>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Python code/data for the class\n",
+      "\n",
+      "The python code and data are in the subfolder lib and data under your nyumath2048 folder.\n",
+      "\n",
+      "**important:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder in your PYTHONPATH.\n",
+      "\n",
+      "* this step allows python interpretor to find the python modules for the class\n",
+      "* you won't be able to run the class IPython notebook without performing this step\n",
+      "\n",
+      "If you don't know what environment variable is or how to create it in your OS, google it"
      ]
     },
     {
@@ -144,7 +165,7 @@
       "\n",
       "IPython notebook is a great tool for creating presentations, it seamlessly integrates markdown, latex, charts, python codes and output.\n",
       "\n",
-      "<img src=ip_slide.png>\n",
+      "<img src=\"img/ip_slide.png\">\n",
       "\n",
       "Steps to create slides within IPython notebook:\n",
       "\n",
@@ -156,7 +177,7 @@
       "  * Fragment: fragments within the same slide\n",
       "  * Skip: the cell is not rendered as slides\n",
       "\n",
-      "The meaning of slide types will become aparent by playing with the class lecture slides from http://yadongli.github.io/numfin  "
+      "The meaning of slide types will become aparent by playing with the class lecture slides from http://yadongli.github.io/nyumath2048  "
      ]
     },
     {
@@ -176,7 +197,7 @@
       "To convert ipython notebook (.ipynb) to slides (.slides.html):\n",
       "\n",
       "* install nodejs from http://nodejs.org/\n",
-      "* go to your local folder numfin from command line window\n",
+      "* go to your local folder nyumath2048 from command line window\n",
       "* run ```python bs.py```, this converts all the notebooks (those with extension .ipynb) in the folder to slides (with extension .slides.html)\n",
       "* or run ```python bs.py onebook``` to convert a single notebook onebook.ipynb to slides\n",
       "* The following is the underlying conversion command used by bs.py, which can also be directly typed from the command line:\n",
@@ -184,7 +205,7 @@
       "```ipython nbconvert --to slides --template hidecode.tpl --reveal-prefix \"//cdn.jsdelivr.net/reveal.js/2.6.2\" yournotebook.ipynb```\n",
       "\n",
       "* the hidecode.tpl hides the python code cells from being displayed in the slides, use the showcode.tpl instead if you want to show them (like Lecture1)\n",
-      "* both showcode.tpl and hidecode.tpl are included in the numfin folder\n",
+      "* both showcode.tpl and hidecode.tpl are included in the nyumath2048 folder\n",
       "* you can edit these .tpl files to change the behaviours of the slides"
      ]
     },
@@ -207,7 +228,7 @@
       "\n",
       "* start a web server from the command line window: ```python -m SimpleHTTPServer 8000```, the 8000 is the port number \n",
       "* point your browser to http://localhost:8000 , where you can find a list of links to the .slides.html files\n",
-      "* you can also serve the resulting .slides.html from a remote web server with a real URL (like github: http://yadongli.github.io/numfin)\n",
+      "* you can also serve the resulting .slides.html from a remote web server with a real URL (like github: http://yadongli.github.io/nyumath2048)\n",
       "\n",
       "Note that even if you run a local webserver, the slides requires internet connections to render properly (due to the dependency on the reveal.js and mathjax library).\n",
       "\n",
@@ -226,7 +247,7 @@
       "\n",
       "The NBConvert and reveal.js unfortunately do not have good documentations yet, the following are some useful tips :\n",
       "\n",
-      "* edit the custom.css file to change font size (also under numfin)\n",
+      "* edit the custom.css file to change font size (also under nyumath2048)\n",
       "* there are different pre-configured themes for the slides, to change them, edit the following line in the .tpl files:\n",
       "\n",
       "```theme: 'sky',```\n",
@@ -249,7 +270,7 @@
       "\n",
       "The slides can be converted to PDF using chrome browser:\n",
       "\n",
-      "* open the lecture slides using Chrome browser and append \"?print-pdf\" to the end of the URL, e.g.: https://yadongli.github.io/numfin/Lecture1.slides.html?print-pdf\n",
+      "* open the lecture slides using Chrome browser and append \"?print-pdf\" to the end of the URL, e.g.: https://yadongli.github.io/nyumath2048/Lecture1.slides.html?print-pdf\n",
       "* reloading the page with the \"?print-pdf\" in the url, select print from the right click mouse menu in Chrome\n",
       "* In the pop up print window, select \"Save as PDF\" in Destination, and select \"None\" for Margins\n",
       "* click Save and give it a destination file name\n",
@@ -279,7 +300,10 @@
       "http://www.youtube.com/watch?v=26wgEsg9Mcc\n",
       "\n",
       "Pandas: \n",
-      "http://pandas.pydata.org/pandas-docs/dev/10min.html\n"
+      "http://pandas.pydata.org/pandas-docs/dev/10min.html\n",
+      "\n",
+      "and most importantly: Google!\n",
+      "* you pretty much can find answers to all your python question by googling it"
      ]
     }
    ],
