--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:8ecdd2ef297b3663c4c2a31c542c3ee19d95880f8d0fc72a40602b9df818a39a"
+  "signature": "sha256:ccabae1797a969e97a702e4de429a18724d4111c5313d11565a19ea10cf76bcc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,7 +39,7 @@
       "* Ph.D. Mathematics, New York University\n",
       "\n",
       "### Yadong Li\n",
-      "* Head of trading book caital modeling, Barclays\n",
+      "* Head of trading book capital modeling, Barclays\n",
       "* Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison\n",
       "* Master of Financial Engineering, University of California, Berkeley "
      ]
@@ -85,14 +85,14 @@
       }
      },
      "source": [
-      "### Different levels of understanding\n",
+      "#### Levels of understanding\n",
       "\n",
-      "* background: talk about the problem\n",
-      "* information: understand the key drivers, and can simplify the problem\n",
+      "* background: describe the problem\n",
+      "* information: understand the key drivers\n",
       "* insight: fomulate it as a mathematical problem\n",
-      "* knowledge: solved the problem\n",
-      "* experience: used the solution in practice, understand its limitations and connection to other problems \n",
-      "* intuition: the knowledge and experience gained allow you to easily reason about other problems"
+      "* knowledge: solved the mathematical problem\n",
+      "* experience: seen and used the numbers, understand the limitations and connections \n",
+      "* intuition: able to see through things, and sensibly reason about new problems"
      ]
     },
     {
@@ -107,6 +107,7 @@
       "-------------\n",
       "\n",
       "* Know basic calculus and linear algebra\n",
+      "* Know basic stochastic calculus and derivative pricing theories\n",
       "* Have some prior programming experience\n",
       "* Are willing to learn through hard work"
      ]
@@ -172,7 +173,21 @@
       "  \n",
       "* Monte Carlo method in Financial Engineering\n",
       "\n",
-      "  P. Glasserman 2010\n",
+      "  P. Glasserman 2010"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Lecture notes and homework\n",
+      "\n",
+      "Available online at: http://yadongli.github.io/nyumath2048\n",
+      "\n",
       "\n",
       "## Grades\n",
       "* Homework 50%\n",
@@ -188,7 +203,7 @@
       }
      },
      "source": [
-      "# Software Basics"
+      "# Software Practices"
      ]
     },
     {
@@ -466,7 +481,7 @@
       }
      },
      "source": [
-      "## This Class uses Python\n",
+      "## We use Python\n",
       "\n",
       "Python\n",
       "\n",
@@ -480,8 +495,17 @@
       "* numpy/scipy: high quality matrix and numerical library\n",
       "* matplotlib: powerful visualization library\n",
       "* IPython: highly productive interactive working environment\n",
-      "* Pandas: powerful data and time series analysis package\n",
-      "\n",
+      "* Pandas: powerful data and time series analysis package"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "Python resources\n",
       "\n",
       "* Enthought Canopy: a commercial Python distribution, free for students\n",
@@ -494,9 +518,9 @@
       "* With the latest IPython, numpy/pandas/scipy etc.\n",
       "* either 32bit or 64bit version\n",
       "\n",
-      "Pyton setup guide:\n",
+      "Pyton setup instructions:\n",
       "\n",
-      "http://yadongli.github.io/numfin/PythonSetup.slides.html"
+      "* available at: http://yadongli.github.io/nyumath2048"
      ]
     },
     {
