--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:ccabae1797a969e97a702e4de429a18724d4111c5313d11565a19ea10cf76bcc"
+  "signature": "sha256:157a2d54115fa82434e0a383983adabb74bbd95015881445fa5aa06e7c9b191e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -606,6 +606,8 @@
       "  * default rule: round to nearest, ties to even digit\n",
       "    * e.g., round to 4 significant digit: $3.1245 \\rightarrow 3.124, 43515 \\rightarrow 43520$ \n",
       "  * addition and multiplication are still commutative, but not associative\n",
+      "  * intermediate calculations could be done at higher precision to minimize rounding error\n",
+      "    * e.g. Intel CPU's FPU uses 80bit representation for intermediate calculation\n",
       "* basic operations\n",
       "  * arithmetic: add, multiplication, sqrt etc\n",
       "  * conversion: btw formats, to/from string etc\n",
@@ -630,7 +632,7 @@
       "* IEEE 754 made compromise for practicality\n",
       "  * many of them do not make sense in a strict mathematical sense\n",
       "  * but they are necessary evils for the greater goods\n",
-      "* it allows hardware designer and software developer to stick to a common interface\n",
+      "* it establishes a clear interface hardware designers and software developers\n",
       "* its main designer, William Kahan won the Turing award in 1989\n",
       "\n",
       "The standard is widely implemented in modern hardware and software,\n",
