--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:157a2d54115fa82434e0a383983adabb74bbd95015881445fa5aa06e7c9b191e"
+  "signature": "sha256:d8558b819425942fdc73f47661904f750859038130a4f4e6a7495b360c4565c5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -531,7 +531,7 @@
       }
      },
      "source": [
-      "# Errors and floating point\n",
+      "# Errors and floating point computation\n",
       "\n",
       "\n",
       "James Gosling: \"95% of the folks out there are completely clueless about floating-point\""
