--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d8558b819425942fdc73f47661904f750859038130a4f4e6a7495b360c4565c5"
+  "signature": "sha256:f24a0017487ad7d70b1cdba748f12aaf4769bc3e24c4c62991b2a6b29d02f8bb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,7 @@
      "source": [
       "# Scientific Computing in Finance\n",
       "\n",
-      "* Spring 2015\n",
+      "* MATH-GA 2048, Spring 2015\n",
       "* Courant Institute of Mathematical Sciences\n",
       "* New York University"
      ]
@@ -39,7 +39,7 @@
       "* Ph.D. Mathematics, New York University\n",
       "\n",
       "### Yadong Li\n",
-      "* Head of trading book capital modeling, Barclays\n",
+      "* Head of trading book risk modeling, Barclays\n",
       "* Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison\n",
       "* Master of Financial Engineering, University of California, Berkeley "
      ]
@@ -71,7 +71,7 @@
      "source": [
       "## Objectives of this class\n",
       "\n",
-      "* Teach principles of scientific computing\n",
+      "* Teach fundamental principles of scientific computing\n",
       "* Teach the most common numerical techniques in quantitative Finance \n",
       "* Develop intuitions and essential skills using real world examples\n",
       "* Help students to start a career in quantitative Finance"
@@ -87,12 +87,12 @@
      "source": [
       "#### Levels of understanding\n",
       "\n",
-      "* background: describe the problem\n",
-      "* information: understand the key drivers\n",
-      "* insight: fomulate it as a mathematical problem\n",
-      "* knowledge: solved the mathematical problem\n",
-      "* experience: seen and used the numbers, understand the limitations and connections \n",
-      "* intuition: able to see through things, and sensibly reason about new problems"
+      "* description: able to talk about the problem\n",
+      "* insight: understand the dynamics and key drivers\n",
+      "* abstraction (model): fomulate it as a mathematical problem\n",
+      "* knowledge: solve the mathematical problem\n",
+      "* experience (skill): solved the real problems, understand the practical limitations\n",
+      "* intuition: able to see through, make connections and sensibly reason new problems"
      ]
     },
     {
@@ -146,8 +146,8 @@
       "| 2-3 | Linear Algebra | Portfolio optimization, PCA, least square |\n",
       "| 4 | Rootfinding and interpolation | Curve building |\n",
       "| 5 | Derivatives and integration | Hedging, Risk Transformation |\n",
-      "| 7-8 | Optimization | Model calibration, Maximum entropy |\n",
-      "| 9-11 | Monte Carlo simulation | Derivative pricing, Allocation |\n",
+      "| 7-8 | Optimization | Model calibration|\n",
+      "| 9-11 | Monte Carlo simulation | Exotic pricing, Max entropy, Allocation |\n",
       "| 12-13 | ODE/PDE | Pricing |"
      ]
     },
@@ -229,7 +229,8 @@
       "| L-2 Cache |  50GB/s | 10 cycles | 256K/core |\n",
       "| L-3 Cache |  30GB/s | 40 - 75 cycles | 8MB shared |\n",
       "| RAM | 15GB/s | 60-100 ns | 2 - 128GB |\n",
-      "| Disk | 50MB/s | ~5ms | $\\infty$ |"
+      "| Disk | 50MB/s | ~5ms | $\\infty$ |\n",
+      "| Network | evn slower | much slower | $\\infty$ |"
      ]
     },
     {
@@ -280,7 +281,8 @@
      },
      "source": [
       "#### Modifiability\n",
-      "* \"modification is undesirable but modifiability is paramount\""
+      "* \"modification is undesirable but modifiability is paramount\"\n",
+      "* modular design, learn from hardware designers"
      ]
     },
     {
@@ -305,10 +307,7 @@
      },
      "source": [
       "#### Other desirable features:\n",
-      "* Scalability\n",
-      "* Robustness\n",
-      "* Easy support and maintenance\n",
-      "* and many more"
+      "* Scalability, robustness, Easy support and maintenanc etc."
      ]
     },
     {
@@ -468,9 +467,9 @@
       }
      },
      "source": [
-      "\"Lisp is worth learning for the profound enlightenment experience you will have when you finally get it; that experience will make you a better programmer for the rest of your days, even if you never actually use Lisp itself a lot.\"\n",
+      "Eric Raymond, \"How to Become a Hacker\":\n",
       "\n",
-      "Eric Raymond, \"How to Become a Hacker\""
+      "\"Lisp is worth learning for the profound enlightenment experience you will have when you finally get it; that experience will make you a better programmer for the rest of your days, even if you never actually use Lisp itself a lot.\""
      ]
     },
     {
@@ -485,7 +484,7 @@
       "\n",
       "Python\n",
       "\n",
-      "* a powerful dynamic scripting language \n",
+      "* a powerful dynamic and strongly typed scripting language \n",
       "* extremely popular in scientific computing\n",
       "* strong momentum in quantitative finance\n",
       "* highly productive, low learning curve\n",
@@ -514,7 +513,7 @@
       "\n",
       "Python version:\n",
       "\n",
-      "* ** Python 2.7 ** : python 3 is not backward compatible\n",
+      "* ** Python 2.7.x ** : python 3 is not backward compatible\n",
       "* With the latest IPython, numpy/pandas/scipy etc.\n",
       "* either 32bit or 64bit version\n",
       "\n",
@@ -554,7 +553,7 @@
       "\n",
       "Both measure are useful in practice.\n",
       "\n",
-      "* Beware of the absolute value when compare relative errors"
+      "* Beware of the absolute values when compare relative errors"
      ]
     },
     {
