minor edits in lecture1

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:f24a0017487ad7d70b1cdba748f12aaf4769bc3e24c4c62991b2a6b29d02f8bb"
+  "signature": "sha256:022c1086c206ad9bda6b05617e72700aefbcd443cec9c3d930588e473c9cbbff"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -88,11 +88,11 @@
       "#### Levels of understanding\n",
       "\n",
       "* description: able to talk about the problem\n",
-      "* insight: understand the dynamics and key drivers\n",
-      "* abstraction (model): fomulate it as a mathematical problem\n",
-      "* knowledge: solve the mathematical problem\n",
-      "* experience (skill): solved the real problems, understand the practical limitations\n",
-      "* intuition: able to see through, make connections and sensibly reason new problems"
+      "* insight: understood the dynamics and key drivers\n",
+      "* abstraction (model): fomulated it as a mathematical problem\n",
+      "* knowledge: solved the mathematical problem\n",
+      "* experience (skill): applied the theory to real world, understood the practical limitations\n",
+      "* intuition: able to see through, make connections and sensibly reason about new problems"
      ]
     },
     {
@@ -230,7 +230,7 @@
       "| L-3 Cache |  30GB/s | 40 - 75 cycles | 8MB shared |\n",
       "| RAM | 15GB/s | 60-100 ns | 2 - 128GB |\n",
       "| Disk | 50MB/s | ~5ms | $\\infty$ |\n",
-      "| Network | evn slower | much slower | $\\infty$ |"
+      "| Network | vary | much longer | $\\infty$ |"
      ]
     },
     {
