changed slides template and title format

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:022c1086c206ad9bda6b05617e72700aefbcd443cec9c3d930588e473c9cbbff"
+  "signature": "sha256:3252d123e8e6c6f36eae870b607954bc67e426135240adcc783e7f010d23422d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -136,7 +136,7 @@
       }
      },
      "source": [
-      "##Main Topics in this class\n",
+      "##Main topics in this class\n",
       "\n",
       "A rough schedule of the class:\n",
       "\n",
@@ -214,7 +214,7 @@
       }
      },
      "source": [
-      "## Modern Hardware\n",
+      "## Modern hardware\n",
       "\n",
       "* Processor speed/throughput continues to grow at an impressive rate\n",
       " * multi-core\n",
@@ -564,7 +564,7 @@
       }
      },
      "source": [
-      "## Sources of Error\n",
+      "## Sources of error\n",
       "\n",
       "Impreciseness in the theory or model itself\n",
       "\n",
@@ -594,7 +594,7 @@
       }
      },
      "source": [
-      "## IEEE 754 Standard\n",
+      "## IEEE 754 standard\n",
       "\n",
       "First published in 1985, the standard includes:\n",
       "\n",
@@ -1320,7 +1320,7 @@
       }
      },
      "source": [
-      "## Limited Precision\n",
+      "## Limited precision\n",
       "* Small number is often lost in addition and subtraction"
      ]
     },
@@ -1414,7 +1414,7 @@
       }
      },
      "source": [
-      "## Subtle Errors\n",
+      "## Subtle errors\n",
       "\n",
       "The limited precision can cause subtle errors that are puzzling even for experiened programmers."
      ]
@@ -1750,7 +1750,7 @@
       }
      },
      "source": [
-      "## Condition Number\n",
+      "## Condition number\n",
       "Consider the relative error of a function with multiple arguments: $f = f(x_1, ..., x_n)$:\n",
       "\n",
       "\\begin{eqnarray} \n",
@@ -1780,7 +1780,7 @@
       }
      },
      "source": [
-      " ## Condition Number Examples\n",
+      " ## Condition number examples\n",
       " \n",
       " Condition number is the systematic way to detect potential numerical problems:\n",
       " \n",
