--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4811a8898806451a1e43ac1aca32cb4ac5c4067a584975b67f7034bc65e73023"
+  "signature": "sha256:f4b761055a89dccf9ba6ab799f05366de0360e22f602b527f83b68597736d705"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -77,7 +77,7 @@
       "* Enthought canopy comes with a graphical package manager\n",
       "* Anaconda comes with command line package manager ```conda```\n",
       "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)\n",
-      "* both distributions support major OS\n",
+      "* both distributions support major OSes\n",
       "\n",
       "Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS."
      ]
@@ -107,9 +107,10 @@
       "\n",
       "You should see a browser wndow with a list of notebooks (with extension .ipynb) under your current folder, click the link to open and edit notebook within the browser. \n",
       "\n",
-      "* IPython notebook works with new versions of all major browsers. (not IE older than version 10 does not work)\n",
+      "* IPython notebook works with new versions of all major browsers. (IE older than version 10 does not work)\n",
       "\n",
-      "Check your IPython installation if you do not see a brower window like below:\n",
+      "You should see a brower window like below after you start ipython notebook. Check your installation if you don't,\n",
+      "* Then you can click on individual notebooks to view and edit them.\n",
       "\n",
       "<img src=\"img/ipynb.png\" height=300, width=600>"
      ]
@@ -126,7 +127,7 @@
       "\n",
       "The python code and data are in the subfolder lib and data under your nyumath2048 folder.\n",
       "\n",
-      "**important:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder in your PYTHONPATH.\n",
+      "**important:** You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.\n",
       "\n",
       "* this step allows python interpretor to find the python modules for the class\n",
       "* you won't be able to run the class IPython notebook without performing this step\n",
@@ -164,6 +165,8 @@
       "## Create slides using IPython\n",
       "\n",
       "IPython notebook is a great tool for creating presentations, it seamlessly integrates markdown, latex, charts, python codes and output.\n",
+      "\n",
+      "* you don't need to create slides for your homework submission, but you may want to use it for your project presentation.\n",
       "\n",
       "<img src=\"img/ip_slide.png\">\n",
       "\n",
