--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:3b439edb2dc2491ed91c39d8ecec70339012220c34256f88b0c0e09e9b8bc5e8"
+  "signature": "sha256:7644bfeb2b402fa92cff2c603fe3d91feff3e4a17ea15391afa108c6ba393b26"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -92,16 +92,16 @@
       "* The last couple groups may have 3 or 5 people, if the class cannot be evenly divided by 4\n",
       "* The project will be distributed in the middle of the semester\n",
       "\n",
-      "Project presentation:\n",
+      "Project grades:\n",
       "* Each team will take 10 minutes to present their project during the last lecture\n",
       "* The project will be graded by tecnical merits **and** presentation skills and clarity, this is the base grade \n",
       "* All team memebers receive the same base grade, \n",
-      "* and a bonus credit of +40% of your base grade conditioned on that:\n",
+      "* A bonus credit of +40% of your base grade will be given to the team conditioned on that:\n",
       "  1. all four team members unanomously agree on every individuals' contributions to this project\n",
       "  2. they acknowledge that contribution in the final presentation. \n",
       "* the bonus credit will be ditributed according to the unamomous percentage:\n",
-      "  * eg, if you received a score of 50 for your project, and you agreed that the four members' contributions are [50%, 30%, 10%, 10%], then the bonus credits will 20, and team members receives [10, 6, 2, 2] bonus credit, and the final score will be [60, 56, 52, 52]. \n",
-      "  * if the team is made up with more or less people, it only affects the distribution but not the total bonus\n",
+      "  * eg, if you received a score of 50 for your project, and you agreed that the four members' contributions are [50%, 30%, 10%, 10%], then the bonus credits will 20, and team members receives [10, 6, 2, 2] bonus credit, and the final score will be [60, 56, 52, 52] for the four members. \n",
+      "  * if the team is made up with more or less people, it only affects the distribution but not the team's total bonus\n",
       "* if team members cannot unanomously agree on the contribution percentages, then no one receives any bonus credit.\n",
       "* this rule is designed to encourage participation, and reward those who do more work in the project\n",
       "  * it is suggested to divide the project into smaller pieces and agree on the contribution of each parts, then if a team member failed to deliver his/her part, then he/she has to relinquish the contribution to whoever picks up the work."
