--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c246dd2fd6a33c1c0a984ff345138730bf486ff4ca25a5e30f5442a27707bf87"
+  "signature": "sha256:6c3c1b2ed455d27e4a7e8088f2cfe55d5122f6df1c92e36f1a4c2ab3d4056282"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,7 +28,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -64,7 +64,7 @@
       "\n",
       "$$f(\\kappa) = \\frac{r_0\\sigma^2}{\\kappa}(e^{-\\kappa t} - e^{-2\\kappa t})$$\n",
       "\n",
-      "1. compute its condition number, assuming $\\kappa$ is the only variable, comment on whether the computation should is stable around $\\kappa = 0$\n",
+      "1. compute its condition number, assuming $\\kappa$ is the only variable, comment on whether the computation should be stable around $\\kappa = 0$\n",
       "2. implement a function to compute the above expression, which is numerically stable around $\\kappa = 0$. \n",
       "\n",
       "Hint: to get the full credit, you need to explain your choice of any thresholds in #2."
@@ -82,8 +82,56 @@
       "2. how does the computation time increase with the size of matrix? \n",
       "3. [open question] can you guess at what matrix size, do the cache misses start affecting the computation speed? explain your conclusion\n",
       "\n",
-      "Hint: %timeit is a useful timing tool in IPython"
+      "Hint: \n",
+      "\n",
+      "* %timeit is a useful timing tool in IPython, or you can use time.clock() function\n",
+      "* numpy has two ways of representing matrix, one is array of arrays, another is matrix type. It is better to only use one representation to avoid confusions. For array types, the matrix production is ```a.dot(b)```, for matrix type, the matrix production is ```a*b```. We recommend you to stick with array type to avoid any potential confusions. The ```a*b``` on array type is element wise multiplication. A common mistake is use ```a*b``` for matrix production on array type. Please see the following code section as an example.\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+      "b = a + 1 # elment wise add\n",
+      "print \"a=\\n\", a \n",
+      "print \"\\nb=a+1\\n\", b\n",
+      "c = a.dot(b) # matrix product\n",
+      "d = a*b #elment wise multiplication\n",
+      "\n",
+      "print \"\\nc=a.dot(b)\\n\", c\n",
+      "print \"\\nd=a*b\\n\", d"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "a=\n",
+        "[[1 2 3]\n",
+        " [4 5 6]\n",
+        " [7 8 9]]\n",
+        "\n",
+        "b=a+1\n",
+        "[[ 2  3  4]\n",
+        " [ 5  6  7]\n",
+        " [ 8  9 10]]\n",
+        "\n",
+        "c=a.dot(b)\n",
+        "[[ 36  42  48]\n",
+        " [ 81  96 111]\n",
+        " [126 150 174]]\n",
+        "\n",
+        "d=a*b\n",
+        "[[ 2  6 12]\n",
+        " [20 30 42]\n",
+        " [56 72 90]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     }
    ],
    "metadata": {}
