--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6c3c1b2ed455d27e4a7e8088f2cfe55d5122f6df1c92e36f1a4c2ab3d4056282"
+  "signature": "sha256:852dd37d86c6bd7c3938cb100869e97a2817e036ee8e8a68fbbe4788f6c48878"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -85,7 +85,7 @@
       "Hint: \n",
       "\n",
       "* %timeit is a useful timing tool in IPython, or you can use time.clock() function\n",
-      "* numpy has two ways of representing matrix, one is array of arrays, another is matrix type. It is better to only use one representation to avoid confusions. For array types, the matrix production is ```a.dot(b)```, for matrix type, the matrix production is ```a*b```. We recommend you to stick with array type to avoid any potential confusions. The ```a*b``` on array type is element wise multiplication. A common mistake is use ```a*b``` for matrix production on array type. Please see the following code section as an example.\n"
+      "* numpy has two ways of representing matrix, one is array of arrays, another is matrix type. For array types, the matrix production is ```a.dot(b)```, for matrix type, the matrix production is ```a*b```. We recommend you to stick with array type to avoid any potential confusions. The ```a*b``` on array type is element wise multiplication. A common mistake is use ```a*b``` for matrix production on array type. Please see the following code section as an example."
      ]
     },
     {
