fixed typo - 1 credit to Yishen Song

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:9fd027fbf8082c2074d46c7790b76f296e3b8cf969ecbc0570ddfb1568e7c4b9"
+  "signature": "sha256:3a1007c180e21f6a28806a7b8baddd3b385ee4330a79f3ebafdebc822d107cdd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -667,9 +667,9 @@
       "\n",
       "* 32 bit vs. 64 bit format\n",
       "\n",
-      "| Format | Sign | Fraction | Exponent | $p$ |\n",
+      "| Format | Sign | Fraction (incl. the implicit bit) | Exponent | $p$ |\n",
       "| :----: | ---: | ----------: | -------: | --------: | \n",
-      "| IEEE 754 - 32 bit | 1    |      23     |   8      |  127 |\n",
+      "| IEEE 754 - 32 bit | 1    |      24     |   8      |  127 |\n",
       "| IEEE 754 - 64 bit | 1    |      53     |   11     | 1023 |\n",
       "\n",
       "* there is an implicit leading bit of 1 and the binary point before fraction bits\n",
