--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -1256,16 +1256,14 @@
       }
      },
      "source": [
-      "## Notation and definitions\n",
-      "\n",
-      "### Scalar function \n",
+      "## Scalar function \n",
       "\n",
       "$$f(\\boldsymbol x) = f(x_1, ..., x_n)$$\n",
       "\n",
       "* Derivative to vector (Gradient): $\\frac{\\partial f}{\\partial \\boldsymbol x} = \\nabla f = [\\frac{\\partial f}{\\partial x_1}, ..., \\frac{\\partial f}{\\partial x_1}]$\n",
       "* Note that $\\frac{\\partial f}{\\partial \\boldsymbol x}$ is a **row vector**, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed.\n",
       "\n",
-      "### Vector function \n",
+      "## Vector function \n",
       "\n",
       "$$\\boldsymbol{ y(x) } = [y_1(\\boldsymbol x), ..., y_n(\\boldsymbol x)]^T$$\n",
       "\n",
@@ -1314,7 +1312,7 @@
       "\n",
       "* Powerful mean/variance portfolio theory can be expressed succinctly using linear algebra and matrix calculus. \n",
       "\n",
-      "## Definitions\n",
+      "### Definitions\n",
       "Suppose there are $n$ risky assets on the market, with random return vector of $\\bs r$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\boldsymbol w$: a portfolio, its elements are dollar amounts invested in each asset\n",
@@ -1419,11 +1417,14 @@
       }
      },
      "source": [
-      "## Implied view of a portfolio:\n",
+      "## Implied view of a portfolio\n",
       "\n",
       "* From any portfolio, we can backout its implied excess return forecast $\\boldsymbol f$\n",
       "* The implied forecast is nothing but the betas to the portfolio\n",
-      "* Consider the market portfolio: the market collectively believe that $\\boldsymbol {f = \\beta_m}$ (CAPM)"
+      "* Consider the market portfolio: the market collectively believe that $\\boldsymbol {f = \\beta_m}$ (CAPM)\n",
+      "\n",
+      "The implied view is a much better estimate of the return than from historical data.\n",
+      "* How many years of historical data you need to reliably estimate expected returns?"
      ]
     },
     {
@@ -2375,7 +2376,7 @@
       "\n",
       "Homework:\n",
       "\n",
-      "* Bindel and Goodman: Problem 4.4, 4.8\n",
+      "* Bindel and Goodman: Problem 4.4, 4.7, 4.8\n",
       "* Complete [homework set 2](http://yadongli.github.io/nyumath2048)"
      ]
     }
