--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:0e895f98174f8d830014008047af1ec1e1f56328ad46e9cc3d1380c34be555c6"
+  "signature": "sha256:2d6d7a4799bccbce6d42a0a0616a0609a8dcc986cf95460c015837b86971c9aa"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -324,7 +324,7 @@
       }
      },
      "source": [
-      "In practice, what often trumpets everything else is: \n",
+      "In practice, what often trumps everything else is: \n",
       "\n",
       "## Time to market !!"
      ]
