--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1660475744a1fca7c55b0661de9d33767a602454421686c110f65c8b39e87b52"
+  "signature": "sha256:c719bbf70eacd9dcb3c9db8ee088a9e11632d96c7f1a7963fda0d30086480849"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -468,7 +468,7 @@
       "5. comments on the implication of your results\n",
       "\n",
       "Hint: \n",
-      "* It is well known that if we average $n$ independent samples, the error of of the average estimator is proportional to $\\frac{\\sigma}{\\sqrt{n}}$, where $\\sigma$ is the std dev of a single sample. You can use this fact to answer the last 3 questions."
+      "* It is well known that if we average $n$ independent samples, the error of of the average estimator is about $\\frac{\\sigma}{\\sqrt{n}}$, where $\\sigma$ is the std dev of a single sample. You can use this fact to answer the last 3 questions."
      ]
     },
     {
