more clarity to slides and hw

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -786,7 +786,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* Correlation and covariance matrix of weekly returns.\n",
+      "Correlation and covariance matrix of weekly returns.\n",
       "* Why don't we correlate the price themselves?"
      ]
     },
@@ -1316,7 +1316,7 @@
       "Suppose there are $n$ risky assets on the market, with random return vector of $\\bs r$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\boldsymbol w$: a portfolio, its elements are dollar amounts invested in each asset\n",
-      "  * $\\bs w^T r$ is the portfolio's return\n",
+      "  * $\\bs w^T \\bs r$ is the portfolio's return\n",
       "  * $\\sigma^2 = \\boldsymbol w^TV\\boldsymbol w$: the variance of its return\n",
       "* $\\boldsymbol w_b$: a benchmark portfolio, e.g. a sector index\n",
       "  * $\\boldsymbol \\beta_b = \\frac{V\\boldsymbol w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
@@ -1333,22 +1333,40 @@
       }
      },
      "source": [
-      "## Optimal Portfolio and Sharp Ratio\n",
-      "\n",
-      "### Excess return forecast\n",
+      "## Excess return forecast\n",
       "* $\\boldsymbol f = \\mathbb{E}[\\bs r] - r_0$ is a vector of excess return forecast of all assets\n",
       "  * $r_0$ is the risk free rate\n",
       "* $\\boldsymbol f$ is a view, which can be from:\n",
       "  * Fundamental research: earning forcasts, revenue growth etc\n",
       "  * Technical and quantitative analysis\n",
-      "  * Your secret trading signal\n",
-      "  \n",
-      "### Optimal portfolio\n",
+      "  * Your secret trading signal"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Optimal portfolio and Sharp Ratio\n",
       "Gien the view $\\boldsymbol f$, the optimal portfolio $\\boldsymbol w$ to express the view is:\n",
       " * minimize the variance (risk): $\\boldsymbol w^TV\\boldsymbol w$\n",
       " * while preserving an unit excess return: $\\boldsymbol w^T \\boldsymbol f = 1$\n",
       " \n",
       "which gives the highest Sharp ratio under the view $\\boldsymbol f$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "Why we take the covariance matrix $V$ as a constant, but treat expected return $\\bs f$ as a variable?"
      ]
     },
     {
@@ -1364,8 +1382,8 @@
       "The optimal portfolio can be solved analytically using Lagrange multiplier and matrix calculus:\n",
       "\n",
       "$$\\begin{array}\n",
-      "\\\\  & L &= \\bs w^TV \\boldsymbol w - 2 \\lambda (\\boldsymbol f^T \\boldsymbol w - 1) \\\\\n",
-      "& \\frac{\\partial L}{\\partial \\boldsymbol w} &= 2 V \\boldsymbol w - 2 \\lambda \\boldsymbol f = 0 \\\\\n",
+      "\\\\  & l &= \\bs w^TV \\boldsymbol w - 2 \\lambda (\\boldsymbol f^T \\boldsymbol w - 1) \\\\\n",
+      "& \\frac{\\partial l}{\\partial \\boldsymbol w} &= 2 V \\boldsymbol w - 2 \\lambda \\boldsymbol f = 0 \\\\\n",
       "\\end{array}$$\n",
       "$$ V \\boldsymbol w - \\lambda \\boldsymbol f = 0 \\iff \\boldsymbol w = \\lambda V^{-1} \\boldsymbol f $$\n",
       "\n",
